[package]
name = "secret_business_card_demo"
version = "0.1.0"
authors = ["seanrad"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm/", default-features = false, tag = "v1.1.9-secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm/", tag = "v1.1.9-secret" }
rand = { version = "0.8.5", default-features = false }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", features = [
  "permit",
  "viewing-key",
], rev = "9b74bdac71c2fedcc12246f18cdfdd94b8991282" }
secret-toolkit-crypto = { git = "https://github.com/scrtlabs/secret-toolkit", features = [
  "rand",
  "hash",], rev = "9b74bdac71c2fedcc12246f18cdfdd94b8991282" }
snafu = { version = "0.7.1" }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
schemars = "0.8.1"
base64 = "0.21.0"


[dev-dependencies]
cosmwasm-schema = "1.1.0"
